cabal-version:       2.4
name:                turtle-powered
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Aleksei Pirogov
maintainer:          astynax@users.noreply.github.com
copyright:           Aleksei Pirogov, 2017-2020

build-type:          Simple
extra-source-files:  CHANGELOG.md, README.org

common exe
  build-depends:       base >=4.13 && <4.15
                     , turtle
                     , system-filepath
                     , text
                     , foldl
                     , managed
                     , process
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , PackageImports
  ghc-options:       -Wall
                     -Wcompat
                     -Wincomplete-record-updates
                     -Wincomplete-uni-patterns
                     -Wredundant-constraints
                     -Wmissing-exported-signatures

executable diredit
  import:            exe
  main-is:           DirEdit.hs

executable refolder
  import:            exe
  main-is:           ReFolder.hs

executable uncue
  import:            exe
  main-is:           UnCue.hs
